--- a/src/Hufftman.Tests/Huffman.Tests.csproj
+++ b/src/Hufftman.Tests/Huffman.Tests.csproj
@@ -18,6 +18,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Update="Test Files\Great Expectations.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Update="Test Files\War of the Worlds.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
