--- a/src/Huffman.Benchmarks/Huffman.Benchmarks.csproj
+++ b/src/Huffman.Benchmarks/Huffman.Benchmarks.csproj
@@ -20,6 +20,12 @@
     <None Update="Test Files\Les Misérables.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="Test Files\War of the Worlds.huff">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Test Files\War of the Worlds.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
